--- a/data_ingestor/Dockerfile
+++ b/data_ingestor/Dockerfile
@@ -4,5 +4,7 @@ FROM python:latest
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY main.py /
+COPY main.py ./
+
+CMD ["python", "./main.py"]
 
